# python

./: .gitignore
apps/pos_settings/: build_ui.py  pyproject.toml
apps/pos_settings/src/pos_settings/: main_pos_settings.py
apps/pos_settings/src/pos_settings/ui/: main_window.py
libs/core/: pyproject.toml
libs/core/src/core/: event_dispatcher_protocol.py  thread_manager_protocol.py
libs/core_imp/: pyproject.toml
libs/core_imp/src/core_imp/: event_dispatcher.py
libs/settings/: pyproject.toml
libs/settings_gui/: pyproject.toml
