[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-imp"
version = "0.1.0"
description = "Implementation library that builds on core"
requires-python = ">=3.10"
dependencies = [
  "core"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]