[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "settings"
version = "0.1.0"
description = "Implementation of CRUD operations on settings files"
requires-python = ">=3.10"
dependencies = [
  "core",
  "core-imp",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]