[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "settings-gui"
version = "0.1.0"
description = "GUI components for managing settings files"
requires-python = ">=3.10"
dependencies = [
  "core",
  "core-imp",
  "settings",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]